syntax = "proto3";

package softmetal;

service FlashingSupervisor {
  rpc GetCommand(Empty) returns (FlashingCommand);
  rpc RecordLog(RecordLogRequest) returns (Empty);
  rpc RecordProgress(RecordProgressRequest) returns (Empty);
  rpc RecordFinished(RecordFinishedRequest) returns (Empty);
}

message Empty {}

message FlashingConfig {
  message ImageConfig {
    string url = 1;
    uint32 sectorSize = 3;
    string efi_loader_path = 4;
  }
  message Partition {
    string part_uuid = 1;
    uint64 size = 2;
    string gpt_type = 3;
  }

  ImageConfig image_config = 1;
  string target_disk_combined_serial = 2;
  repeated Partition persistent_partitions = 3;
}

enum PowerControlType {
  REBOOT = 0;
  POWER_OFF = 1;
}

message FlashingCommand {
  uint64 session_id = 3;
  FlashingConfig config = 1;
  PowerControlType power_on_completion = 2;
}

message RecordLogRequest {
  uint64 session_id = 2;
  string log = 1;
}

message RecordProgressRequest {
  uint64 session_id = 2;
  float progress = 1;
}

message RecordFinishedRequest {
  uint64 session_id = 2;
  bool ok = 1;
}